Changed section element in header element to nav

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -36,7 +36,7 @@ p {
     color: #d9dcd6;
 }
 
-.header section {
+.header nav {
     padding-top: 15px;
     margin-right: 20px;
     float: right;
@@ -44,11 +44,11 @@ p {
     font-size: 20px;
 }
 
-.header section ul {
+.header nav ul {
     list-style-type: none;
 }
 
-.header section ul li {
+.header nav ul li {
     display: inline-block;
     margin-left: 25px;
 }
